# wordpress-vip-categorization

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Makefile  QUICKSTART.md  README.md  SETUP.md  auto_init_db.sh  create_tables.py  finish_setup.py  init_db.py  pyproject.toml  results.csv  run_setup.py  test_setup.py  unmatched.csv
.cursor/plans/: code-improvements-v2.plan.md  code-improvements.plan.md  det-91c4fbc6.plan.md  dspy-gepa-documentation-e62292f1.plan.md  reliability-observability-hardening.plan.md
.github/: copilot-code-review-v1.md  copilot-code-review-v2.md
.github/workflows/: ci.yml
data/: taxonomy.csv.example
docs/: CODE_REVIEW_GUIDE.md  DSPY_GEPA_BEST_PRACTICES.md  DSPY_IMPLEMENTATION.md  OPTIMIZATION_QUICKSTART.md  QUICKSTART.md  SETUP.md
prompt-optimiser/: AGENTS.md
prompt-optimiser/configs/: dspy_config_test.json  dspy_config_v1.json  dspy_config_v2.json  dspy_config_v3.json  dspy_config_v4.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_12/: iter_34_prog_7.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_13/: iter_3_prog_1.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_20/: iter_3_prog_1.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_21/: iter_9_prog_2.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_22/: iter_9_prog_2.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_23/: iter_9_prog_2.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_31/: iter_34_prog_7.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_34/: iter_3_prog_1.json
prompt-optimiser/gepa_logs/generated_best_outputs_valset/task_37/: iter_34_prog_7.json
prompt-optimiser/models/: matcher_latest.meta.json  matcher_test.json  matcher_v1.json  matcher_v1_stage1.json  matcher_v3.json
prompt-optimiser/reports/: report_test.md  report_v1.md  report_v2.md  report_v2_stage1.md  report_v4.md
scripts/: bootstrap_supabase.py  generate_dspy_dataset.py  make_quality_check.sh  promote_optimized_model.py  reset_supabase_local.py  run_optimization_workflow.py  run_quick_optimization_test.py  test_setup.py
src/: AGENTS.md  __init__.py  cli.py  config.py  models.py
src/connectors/: __init__.py  wordpress_vip.py
src/data/: AGENTS.md  __init__.py  drop_schema.sql  schema.sql  supabase_client.py
src/exporters/: __init__.py  csv_exporter.py
src/optimization/: AGENTS.md  __init__.py  dspy_optimizer.py  evaluator.py
src/services/: AGENTS.md  __init__.py  categorization.py  embeddings.py  ingestion.py  matching.py  workflow.py
tests/: AGENTS.md  __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_categorization.py  test_cli.py  test_csv_exporter.py  test_dspy_optimizer.py  test_evaluator.py  test_full_pipeline_mock.py  test_ingestion.py  test_matching.py  test_supabase_client.py  test_wordpress_vip.py  test_workflow.py
(+7 files in other folders)
